# tabeliao

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  README.md  action.yml  crate-hashes.json  flake.nix  result
docs/: COSIGN-PLAN.md  GITHUB-ACTION.md
src/: admit.rs  attestations.rs  compliance.rs  cosign.rs  demo.rs  error.rs  lib.rs  main.rs  publish.rs  sbom.rs  sign.rs  slsa.rs
tests/: cli_ed25519_path.rs  e2e.rs  real_openclaw_e2e.rs
